--- a/index.html
+++ b/index.html
@@ -1,13 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Document</title>
+    <title>City Outlet</title>
 </head>
+
 <body>
-    
+
+    <div class="container-fluid">
+        <div class="row mt-5 ml-5">
+            <img src="./assets/images/Logo.png" alt="logo" id="logo">
+        </div>
+    </div>
+
+    <div class="container">
+
+        <div class="row mt-5 justify-content-center align-items-center text-center">
+            <span id="coming-soon">COMING SOON</span>
+        </div>
+
+        <div class="row mt-3 justify-content-center text-center">
+            <div class="col-8 d-flex justify-content-around">
+                <div>
+                    <a class="button" href="">View Photos</a>
+                </div>
+
+                <div>
+                    <a class="button" href="">View Video</a>
+                </div>
+
+                <div>
+                    <a class="button" href="">Download Presentation</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-5 justify-content-center contact">
+            <div class="col-3 offset-3 d-flex flex-column">
+                <span>2210 Babek Avenue</span>
+                <span>White City / Baku, Azerbaijan</span>
+            </div>
+
+            <div class="col-6 d-flex flex-column">
+                <span>Phone: +99450 234-10-06</span>
+                <span>Email: info@cityoutlet.az</span>
+            </div>
+        </div>
+
+
+        <div class="row mt-5 justify-content-center text-center">
+            <div class="col-8 d-flex justify-content-center">
+                <div>
+                    <a href="">
+                        <img src="./assets/images/brandico_facebook.png" alt="" class="sm-icons-fb mr-5">
+                    </a>
+                </div>
+
+                <div>
+                    <a href="">
+                        <img src="./assets/images/akar-icons_twitter-fill.png" alt="" class="sm-icons mr-5">
+                    </a>
+                </div>
+
+                <div>
+                    <a href="">
+                        <img src="./assets/images/akar-icons_youtube-fill.png" alt="" class="sm-icons mr-5">
+                    </a>
+                </div>
+
+                <div>
+                    <a href="">
+                        <img src="./assets/images/cib_instagram.png" alt="" class="sm-icons">
+                    </a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
