--- a/index.html
+++ b/index.html
@@ -13,44 +13,47 @@
 
 <body>
 
-    <div class="container-fluid">
-        <div class="row mt-5 ml-5">
-            <img src="./assets/images/Logo.png" alt="logo" id="logo">
-        </div>
-    </div>
 
     <div class="container">
 
-        <div class="row mt-5 justify-content-center align-items-center text-center">
-            <span id="coming-soon">COMING SOON</span>
+        <div class="row mt-5 justify-content-center justify-content-md-start">
+            <img src="./assets/images/Logo.png" alt="logo" id="logo">
         </div>
 
-        <div class="row mt-3 justify-content-center text-center">
-            <div class="col-8 d-flex justify-content-around">
-                <div>
-                    <a class="button" href="">View Photos</a>
-                </div>
-
-                <div>
-                    <a class="button" href="">View Video</a>
-                </div>
-
-                <div>
-                    <a class="button" href="">Download Presentation</a>
-                </div>
+        <div class="row mt-5 justify-content-center align-items-center text-center">
+            <div class="col-12">
+                <span id="coming-soon">COMING SOON</span>
             </div>
         </div>
 
-        <div class="row mt-5 justify-content-center contact">
-            <div class="col-3 offset-3 d-flex flex-column">
+        <div class="row mt-3 justify-content-center">
+            <!-- <div class="col-8 d-flex justify-content-center"> -->
+                <div class="col-12 col-md-6 mb-5 mb-md-0 text-md-right text-center">
+                    <a class="button px-4 py-3" href="">View Photos</a>
+                </div>
+
+                <div class="col-12 col-md-6 text-md-left text-center">
+                    <a class="button px-4 py-3" href="">View Video</a>
+                </div>
+                <!-- 
+                <div>
+                    <a class="button" href="">Download Presentation</a>
+                </div> -->
+            <!-- </div> -->
+        </div>
+
+        <div class="row mt-5 justify-content-center contact text-center text-md-start">
+
+            <div class="col-12 col-md-6 d-flex flex-column mb-md-0 mb-3 text-md-right text-center">
                 <span>2210 Babek Avenue</span>
                 <span>White City / Baku, Azerbaijan</span>
             </div>
 
-            <div class="col-6 d-flex flex-column">
+            <div class="col-12 col-md-6 d-flex flex-column text-md-left text-center">
                 <span>Phone: +99450 234-10-06</span>
                 <span>Email: info@cityoutlet.az</span>
             </div>
+
         </div>
 
 
@@ -81,7 +84,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 
 
