--- a/index.html
+++ b/index.html
@@ -8,81 +8,87 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./slideshow/dist/mibreit-gallery/css/mibreitGallery.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./slideshow/dist/mibreit-gallery/mibreitGallery.min.js"></script>
     <title>City Outlet</title>
 </head>
 
 <body>
 
+    <video autoplay muted loop id="myVideo">
+        <source src="./assets/media/bg.mp4" type="video/mp4">
+    </video>
 
-    <div class="container">
 
-        <div class="row mt-5 justify-content-center justify-content-md-start">
-            <img src="./assets/images/Logo.png" alt="logo" id="logo">
-        </div>
+    <div class="main">
 
-        <div class="row mt-5 justify-content-center align-items-center text-center">
-            <div class="col-12">
-                <span id="coming-soon">COMING SOON</span>
+        <div class="container">
+            <div class="container">
+                <div class="row justify-content-center mb-5">
+                    <img src="./assets/media/Logo.png" alt="logo" id="logo">
+                </div>
             </div>
-        </div>
 
-        <div class="row mt-3 justify-content-center">
-            <!-- <div class="col-8 d-flex justify-content-center"> -->
+            <div class="row mt-5 justify-content-center align-items-center text-center">
+                <div class="col-12">
+                    <span id="coming-soon">COMING SOON</span>
+                </div>
+            </div>
+
+            <div class="row mt-5 justify-content-center">
                 <div class="col-12 col-md-6 mb-5 mb-md-0 text-md-right text-center">
-                    <a class="button px-4 py-3" href="">View Photos</a>
+                    <a class="button px-4 py-3" href="./slideshow/dist/slideshow.html">View Photos</a>
                 </div>
 
                 <div class="col-12 col-md-6 text-md-left text-center">
                     <a class="button px-4 py-3" href="">View Video</a>
                 </div>
-                <!-- 
-                <div>
-                    <a class="button" href="">Download Presentation</a>
-                </div> -->
-            <!-- </div> -->
-        </div>
-
-        <div class="row mt-5 justify-content-center contact text-center text-md-start">
-
-            <div class="col-12 col-md-6 d-flex flex-column mb-md-0 mb-3 text-md-right text-center">
-                <span>2210 Babek Avenue</span>
-                <span>White City / Baku, Azerbaijan</span>
             </div>
 
-            <div class="col-12 col-md-6 d-flex flex-column text-md-left text-center">
-                <span>Phone: +99450 234-10-06</span>
-                <span>Email: info@cityoutlet.az</span>
-            </div>
 
-        </div>
+            <div class="row mt-5 justify-content-center contact text-center text-md-start">
 
-
-        <div class="row mt-5 justify-content-center text-center">
-            <div class="col-8 d-flex justify-content-center">
-                <div>
-                    <a href="">
-                        <img src="./assets/images/brandico_facebook.png" alt="" class="sm-icons-fb mr-5">
-                    </a>
+                <div class="col-12 col-md-6 d-flex flex-column mb-md-0 mb-3 text-md-right text-center">
+                    <span>2210 Babek Avenue</span>
+                    <span>White City / Baku, Azerbaijan</span>
                 </div>
 
-                <div>
-                    <a href="">
-                        <img src="./assets/images/akar-icons_twitter-fill.png" alt="" class="sm-icons mr-5">
-                    </a>
-                </div>
-
-                <div>
-                    <a href="">
-                        <img src="./assets/images/akar-icons_youtube-fill.png" alt="" class="sm-icons mr-5">
-                    </a>
-                </div>
-
-                <div>
-                    <a href="">
-                        <img src="./assets/images/cib_instagram.png" alt="" class="sm-icons">
-                    </a>
+                <div class="col-12 col-md-6 d-flex flex-column text-md-left text-center">
+                    <span>Phone: +99450 234-10-06</span>
+                    <span>Email: info@cityoutlet.az</span>
                 </div>
             </div>
+
+
+            <div class="row mt-3 justify-content-center text-center">
+                <div class="col-8 d-flex justify-content-center">
+                    <div>
+                        <a href="">
+                            <img src="./assets/media/brandico_facebook.png" alt="" class="sm-icons-fb mr-5">
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="">
+                            <img src="./assets/media/akar-icons_twitter-fill.png" alt="" class="sm-icons mr-5">
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="">
+                            <img src="./assets/media/akar-icons_youtube-fill.png" alt="" class="sm-icons mr-5">
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="">
+                            <img src="./assets/media/cib_instagram.png" alt="" class="sm-icons">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
