--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <div class="row mt-5 justify-content-center">
                 <div class="col-12 col-md-6 mb-5 mb-md-0 text-md-right text-center">
-                    <a class="button px-4 py-3" href="./slideshow/dist/slideshow.html">View Photos</a>
+                    <a class="button px-4 py-3" href="./photos.html">View Photos</a>
                 </div>
 
                 <div class="col-12 col-md-6 text-md-left text-center">
