--- a/index.html
+++ b/index.html
@@ -42,7 +42,32 @@
                 </div>
 
                 <div class="col-12 col-md-6 text-md-left text-center">
-                    <a class="button px-4 py-3" href="">View Video</a>
+<!--                    <a class="button px-4 py-3" href="./photos.html">View Video</a>-->
+
+                    <div class="bs-example">
+                        <!-- Button HTML (to Trigger Modal) -->
+                        <a data-toggle="modal" class="button px-4 py-3" href="#myModal">View Video</a>
+<!--                        <a href="#myModal" class="btn btn-primary btn-lg" data-toggle="modal">Launch Demo Modal</a>-->
+
+                        <!-- Modal HTML -->
+                        <div id="myModal" class="modal fade">
+                            <div class="modal-dialog modal-dialog-centered modal-xl">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title">City Outlet</h5>
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                            <iframe id="cartoonVideo" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/VocBaIEgUi0" allowfullscreen></iframe>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
                 </div>
             </div>
 
@@ -64,25 +89,25 @@
             <div class="row mt-3 justify-content-center text-center">
                 <div class="col-8 d-flex justify-content-center">
                     <div>
-                        <a href="">
+                        <a href="https://www.facebook.com/cityoutletshopping">
                             <img src="./assets/media/brandico_facebook.png" alt="" class="sm-icons-fb mr-5">
                         </a>
                     </div>
 
-                    <div>
-                        <a href="">
-                            <img src="./assets/media/akar-icons_twitter-fill.png" alt="" class="sm-icons mr-5">
-                        </a>
-                    </div>
+<!--                    <div>-->
+<!--                        <a href="">-->
+<!--                            <img src="./assets/media/akar-icons_twitter-fill.png" alt="" class="sm-icons mr-5">-->
+<!--                        </a>-->
+<!--                    </div>-->
 
                     <div>
-                        <a href="">
+                        <a href="https://www.youtube.com/channel/UCBmdMdehXvOO5crrCKpQ4DQ">
                             <img src="./assets/media/akar-icons_youtube-fill.png" alt="" class="sm-icons mr-5">
                         </a>
                     </div>
 
                     <div>
-                        <a href="">
+                        <a href="https://www.instagram.com/cityoutletbaku/">
                             <img src="./assets/media/cib_instagram.png" alt="" class="sm-icons">
                         </a>
                     </div>
