target _blank added

--- a/index.html
+++ b/index.html
@@ -89,25 +89,25 @@
             <div class="row mt-3 justify-content-center text-center">
                 <div class="col-8 d-flex justify-content-center">
                     <div>
-                        <a href="https://www.facebook.com/cityoutletshopping">
+                        <a href="https://www.facebook.com/cityoutletshopping" target="_blank">
                             <img src="./assets/media/brandico_facebook.png" alt="" class="sm-icons-fb mr-5">
                         </a>
                     </div>
 
-<!--                    <div>-->
-<!--                        <a href="">-->
-<!--                            <img src="./assets/media/akar-icons_twitter-fill.png" alt="" class="sm-icons mr-5">-->
-<!--                        </a>-->
-<!--                    </div>-->
+                    <div>
+                        <a href="">
+                            <img src="./assets/media/akar-icons_twitter-fill.png" alt="" class="sm-icons mr-5">
+                        </a>
+                    </div>
 
                     <div>
-                        <a href="https://www.youtube.com/channel/UCBmdMdehXvOO5crrCKpQ4DQ">
+                        <a href="https://www.youtube.com/channel/UCBmdMdehXvOO5crrCKpQ4DQ" target="_blank">
                             <img src="./assets/media/akar-icons_youtube-fill.png" alt="" class="sm-icons mr-5">
                         </a>
                     </div>
 
                     <div>
-                        <a href="https://www.instagram.com/cityoutletbaku/">
+                        <a href="https://www.instagram.com/cityoutletbaku/" target="_blank">
                             <img src="./assets/media/cib_instagram.png" alt="" class="sm-icons">
                         </a>
                     </div>
