twitter link removed

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                         </a>
                     </div>
 
-                    <div>
-                        <a href="">
-                            <img src="./assets/media/akar-icons_twitter-fill.png" alt="" class="sm-icons mr-5">
-                        </a>
-                    </div>
+<!--                    <div>-->
+<!--                        <a href="">-->
+<!--                            <img src="./assets/media/akar-icons_twitter-fill.png" alt="" class="sm-icons mr-5">-->
+<!--                        </a>-->
+<!--                    </div>-->
 
                     <div>
                         <a href="https://www.youtube.com/channel/UCBmdMdehXvOO5crrCKpQ4DQ" target="_blank">
