new image added, icons -> font-awesome

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="./slideshow/dist/mibreit-gallery/css/mibreitGallery.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="./slideshow/dist/mibreit-gallery/mibreitGallery.min.js"></script>
     <title>City Outlet</title>
 </head>
@@ -90,7 +91,8 @@
                 <div class="col-8 d-flex justify-content-center">
                     <div>
                         <a href="https://www.facebook.com/cityoutletshopping" target="_blank">
-                            <img src="./assets/media/brandico_facebook.png" alt="" class="sm-icons-fb mr-5">
+                            <i class="fab fa-facebook-f sm-icons-fb mr-5"></i>
+<!--                            <img src="./assets/media/brandico_facebook.png" alt="" class="sm-icons-fb mr-5">-->
                         </a>
                     </div>
 
@@ -102,13 +104,15 @@
 
                     <div>
                         <a href="https://www.youtube.com/channel/UCBmdMdehXvOO5crrCKpQ4DQ" target="_blank">
-                            <img src="./assets/media/akar-icons_youtube-fill.png" alt="" class="sm-icons mr-5">
+                            <i class="fab fa-youtube sm-icons-fb mr-5"></i>
+<!--                            <img src="./assets/media/akar-icons_youtube-fill.png" alt="" class="sm-icons mr-5">-->
                         </a>
                     </div>
 
                     <div>
                         <a href="https://www.instagram.com/cityoutletbaku/" target="_blank">
-                            <img src="./assets/media/cib_instagram.png" alt="" class="sm-icons">
+                            <i class="fab fa-instagram sm-icons"></i>
+<!--                            <img src="./assets/media/cib_instagram.png" alt="" class="sm-icons">-->
                         </a>
                     </div>
                 </div>
