--- a/photos.html
+++ b/photos.html
@@ -31,6 +31,13 @@
         <div class="tz-gallery">
 
             <div class="row">
+
+                <div class="col-sm-6 col-md-4">
+                    <a class="lightbox" href="./assets/media/29.jpg">
+                        <img src="./assets/media/29.jpg" alt="Bridge">
+                    </a>
+                </div>
+
                 <div class="col-sm-6 col-md-4">
                     <a class="lightbox" href="./assets/media/1.jpg">
                         <img src="./assets/media/1.jpg" alt="Park">
