--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="./slideshow/dist/mibreit-gallery/css/mibreitGallery.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="./slideshow/dist/mibreit-gallery/mibreitGallery.min.js"></script>
-    <title>City Outlet</title>
+    <title>City Park</title>
 </head>
 
 <body>
@@ -26,7 +27,7 @@
         <div class="container">
             <div class="container">
                 <div class="row justify-content-center mb-5">
-                    <img src="./assets/media/Logo.png" alt="logo" id="logo">
+                    <img src="./assets/media/logo.svg" alt="logo" id="logo">
                 </div>
             </div>
 
@@ -38,12 +39,45 @@
 
             <div class="row mt-5 justify-content-center">
                 <div class="col-12 col-md-6 mb-5 mb-md-0 text-md-right text-center">
-                    <a class="button px-4 py-3" href="./slideshow/dist/slideshow.html">View Photos</a>
+                    <a class="button px-4 py-3" href="./photos.html">View Photos</a>
                 </div>
 
                 <div class="col-12 col-md-6 text-md-left text-center">
-                    <a class="button px-4 py-3" href="">View Video</a>
+                    <!--                    <a class="button px-4 py-3" href="./photos.html">View Video</a>-->
+
+                    <div class="bs-example">
+                        <!-- Button HTML (to Trigger Modal) -->
+                        <a data-toggle="modal" class="button px-4 py-3" href="#myModal">View Video</a>
+                        <!--                        <a href="#myModal" class="btn btn-primary btn-lg" data-toggle="modal">Launch Demo Modal</a>-->
+
+                        <!-- Modal HTML -->
+                        <div id="myModal" class="modal fade">
+                            <div class="modal-dialog modal-dialog-centered modal-xl">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title">City Park</h5>
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                            <iframe id="cartoonVideo" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/VocBaIEgUi0" allowfullscreen></iframe>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
                 </div>
+
+                <div class="col-12 col-md-6 mt-5 text-md-center text-center">
+                    <div class="bs-example">
+                        <a class="button px-4 py-3" href="./assets/CityOutler_presentation.pdf">Presentation</a>
+                    </div>
+
+                </div>
+
             </div>
 
 
@@ -56,7 +90,7 @@
 
                 <div class="col-12 col-md-6 d-flex flex-column text-md-left text-center">
                     <span>Phone: +99450 234-10-06</span>
-                    <span>Email: info@cityoutlet.az</span>
+                    <span>Email: info@citypark.az</span>
                 </div>
             </div>
 
@@ -64,26 +98,21 @@
             <div class="row mt-3 justify-content-center text-center">
                 <div class="col-8 d-flex justify-content-center">
                     <div>
-                        <a href="">
-                            <img src="./assets/media/brandico_facebook.png" alt="" class="sm-icons-fb mr-5">
+                        <a href="https://www.facebook.com/cityoutletshopping" target="_blank">
+                            <i class="fab fa-facebook-f sm-icons-fb mr-5"></i>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.youtube.com/channel/UCBmdMdehXvOO5crrCKpQ4DQ" target="_blank">
+                            <i class="fab fa-youtube sm-icons-fb mr-5"></i>
+<!--                            <img src="./assets/media/akar-icons_youtube-fill.png" alt="" class="sm-icons mr-5">-->
                         </a>
                     </div>
 
                     <div>
-                        <a href="">
-                            <img src="./assets/media/akar-icons_twitter-fill.png" alt="" class="sm-icons mr-5">
-                        </a>
-                    </div>
-
-                    <div>
-                        <a href="">
-                            <img src="./assets/media/akar-icons_youtube-fill.png" alt="" class="sm-icons mr-5">
-                        </a>
-                    </div>
-
-                    <div>
-                        <a href="">
-                            <img src="./assets/media/cib_instagram.png" alt="" class="sm-icons">
+                        <a href="https://www.instagram.com/cityoutletbaku/" target="_blank">
+                            <i class="fab fa-instagram sm-icons"></i>
+<!--                            <img src="./assets/media/cib_instagram.png" alt="" class="sm-icons">-->
                         </a>
                     </div>
                 </div>
