--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="embed-responsive embed-responsive-16by9">
-                                            <iframe id="cartoonVideo" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/VocBaIEgUi0" allowfullscreen></iframe>
+                                            <iframe id="cartoonVideo" class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/2Cukx3x-wYg" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
@@ -73,7 +73,7 @@
 
                 <div class="col-12 col-md-6 mt-5 text-md-center text-center">
                     <div class="bs-example">
-                        <a class="button px-4 py-3" href="./assets/CityOutler_presentation.pdf">Presentation</a>
+                        <a class="button px-4 py-3" href="./assets/cIty_park.pdf">Presentation</a>
                     </div>
 
                 </div>
