--- a/photos.html
+++ b/photos.html
@@ -24,7 +24,7 @@
     <div class="container gallery-container">
         <div class="container">
             <div class="row justify-content-center mb-5">
-                <a href="./index.html"><img src="./assets/media/logo-black.png" alt="logo" id="logo"></a>
+                <a href="./index.html"><img src="./assets/media/logo.svg" alt="logo" id="logo"></a>
             </div>
         </div>
 
